add category services
